--- a/src/app/week/week.component.css
+++ b/src/app/week/week.component.css
@@ -65,7 +65,6 @@
   width: 100%;
   height: 100%;
   margin: 0;
-  position: relative;
   overflow-y: scroll;
 }
 
